# libtio

./: .gitignore  Doxyfile.in  Makefile.in  README  config.status  configure.ac
autom4te.cache/: output.0  requests  traces.0
doc/: ie.draft  implementations.txt  td.doc  td.txt
include/: tio.h  tioerror.h  tioexit.h  utf.h
lib/: libtio.so.0.4.8
src/: About  Makefile.in  compare.c  debugout.c  doubleto.c  error.c  errorout.c  finish.c  getparam.c  help.c  init.c  longto.c  msgstack.c_old  output.c  print.c  tioTableBegin.c  uof.c  utf.c  version.c  warningout.c
src/include/: About  compare.h  config.h.in  longto.h  msgstack.h_old  tioinit.h  tiooutput.h  tiowerror.h
src/tests/: About  Makefile.in  fail_test2.c  fail_true.c  fail_true2.c  test_ErrorF.c  test_all_out.c  test_basetioGetC.c  test_basetioGetD.c  test_basetioGetDefC.c  test_basetioGetDefD.c  test_basetioGetDefL.c  test_basetioGetDefS.c  test_basetioGetL.c  test_basetioGetS.c  test_error.c  test_error2.c  test_help.c  test_longto.c  test_output.c  test_strcmp.c  test_table.c  test_tioInit.c  test_true.c  test_utf.c  test_version.c
src/tools/: inlocgen.sh.in  runtests.sh
src/translate/: about
src/translate/C/: finish_msg.h  help_msg.h  init_msg.h
src/translate/ru_RU.UTF-8/: finish_msg.h  help_msg.h  init_msg.h
